--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,15 +12,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/et_sign_up_username"
-            android:layout_width="250sp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15sp"
-            android:hint="username"
-            android:inputType="text"/>
-
-        <EditText
-            android:id="@+id/et_sign_up_email"
+            android:id="@+id/et_login_email"
             android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15sp"
@@ -28,7 +20,7 @@
             android:inputType="text" />
 
         <EditText
-            android:id="@+id/et_sign_up_password"
+            android:id="@+id/et_login_password"
             android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15sp"
@@ -36,20 +28,20 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/btn_register_sign_up"
-            android:layout_width="200sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
-            android:text="SIGN UP"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_register_login"
+            android:id="@+id/btn_login"
             android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_marginTop="25sp"
             android:text="LOGIN"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25sp"
+            android:text="SIGN UP"
             android:textSize="15sp"
             android:textStyle="bold" />
 
