--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="base_red">#A93F3F</color>
+    <color name="red2">#997570</color>
+    <color name="et_login">#E5E5E5</color>
+    <color name="light_grey">#EFEFEF</color>
+    <color name="dark_grey">#3E424B</color>
+    <color name="transparent">#00000000</color>
 </resources>
