--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,50 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="300sp">
+
+        <ImageView
+            android:layout_width="100sp"
+            android:layout_height="100sp"
+            android:layout_marginStart="25sp"
+            android:layout_marginTop="30sp"
+            android:background="@drawable/circle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/appname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50sp"
+            android:layout_marginTop="30sp"
+            android:fontFamily="@font/nunito"
+            android:text="@string/application_name"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100sp"
+            android:fontFamily="@font/nunito"
+            android:text="where every creator dreams comes true"
+            android:textColor="@color/base_red"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/appname"
+            app:layout_constraintTop_toBottomOf="@id/appname" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bordered_rectangle"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_login_email"
-            android:layout_width="250sp"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15sp"
-            android:hint="email"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/et_login_password"
-            android:layout_width="250sp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15sp"
-            android:hint="password"
-            android:inputType="textPassword" />
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="200sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
-            android:text="LOGIN"
-            android:textSize="15sp"
+            android:layout_gravity="left"
+            android:layout_marginStart="40sp"
+            android:fontFamily="@font/nunito"
+            android:text="welcome back,"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="200sp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
-            android:text="SIGN UP"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="15sp"
+            android:background="@drawable/round_et"
+            android:padding="10sp">
+
+            <EditText
+                android:id="@+id/et_login_email"
+                android:layout_width="250sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15sp"
+                android:background="@color/transparent"
+                android:fontFamily="@font/nunito"
+                android:hint="email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/base_red"
+                android:textColorHint="@color/red2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:background="@drawable/round_et"
+            android:padding="10sp">
+
+            <EditText
+                android:id="@+id/et_login_password"
+                android:layout_width="250sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15sp"
+                android:background="@color/transparent"
+                android:fontFamily="@font/nunito"
+                android:hint="password"
+                android:inputType="textPassword"
+                android:textColor="@color/base_red"
+                android:textColorHint="@color/red2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="125sp"
+                android:layout_height="wrap_content"
+                android:layout_margin="12.5sp"
+                android:backgroundTint="@color/et_login"
+                android:fontFamily="@font/nunito"
+                android:text="LOGIN"
+                android:textColor="@color/base_red"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="125sp"
+                android:layout_height="wrap_content"
+                android:layout_margin="12.5dp"
+                android:backgroundTint="@color/et_login"
+                android:fontFamily="@font/nunito"
+                android:text="SIGN UP"
+                android:textColor="@color/base_red"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
