--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegisterActivity"
-    android:backgroundTint="@color/light_grey">
+    android:background="@color/dark_grey">
 
     <LinearLayout
         android:id="@+id/layout_signup"
@@ -44,11 +44,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:layout_marginStart="40sp"
+            android:layout_marginStart="50sp"
             android:fontFamily="@font/nunito"
             android:text="Hello,"
             android:textColor="@color/base_red"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:background="@drawable/round_et"
+            android:backgroundTint="@color/light_grey"
             android:padding="10sp">
 
             <EditText
@@ -68,7 +69,7 @@
                 android:hint="username"
                 android:inputType="text"
                 android:textColor="@color/base_red"
-                android:textColorHint="@color/red2" />
+                android:textColorHint="@color/red2"  />
 
         </LinearLayout>
 
@@ -77,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:background="@drawable/round_et"
+            android:backgroundTint="@color/light_grey"
             android:padding="10sp">
 
             <EditText
@@ -98,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:background="@drawable/round_et"
+            android:backgroundTint="@color/light_grey"
             android:padding="10sp">
 
             <EditText
@@ -118,11 +121,12 @@
             android:id="@+id/regis_btn_signup"
             android:layout_width="200sp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
-            android:backgroundTint="@color/et_login"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/round_et"
+            android:backgroundTint="@color/base_red"
             android:fontFamily="@font/nunito"
             android:text="SIGN UP"
-            android:textColor="@color/base_red"
+            android:textColor="@color/light_grey"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -130,11 +134,12 @@
             android:id="@+id/regis_btn_login"
             android:layout_width="200sp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
-            android:backgroundTint="@color/et_login"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/round_et"
+            android:backgroundTint="@color/base_red"
             android:fontFamily="@font/nunito"
             android:text="LOGIN"
-            android:textColor="@color/base_red"
+            android:textColor="@color/light_grey"
             android:textSize="15sp"
             android:textStyle="bold" />
 
