--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="base_red">#A93F3F</color>
     <color name="red2">#997570</color>
+    <color name="red3">#919191</color>
     <color name="et_login">#E5E5E5</color>
     <color name="light_grey">#EFEFEF</color>
     <color name="dark_grey">#3E424B</color>
