--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Fragments.SearchFragment">
+
 
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
@@ -44,4 +45,4 @@
 
 
     
-</RelativeLayout>
+</LinearLayout>
