--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bottom_navigation"
-            app:itemIconTint="@color/light_grey"
+            app:itemIconTint="@color/base_red"
             app:labelVisibilityMode="unlabeled"
             android:background="?android:attr/windowBackground"
             app:menu="@menu/bottom_navigation" />
