--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,30 @@
 
         </LinearLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tw_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:onClick="onClick"
+                android:clickable="true"
+                android:text="@string/signup"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/nunito"
+                android:textColor="@color/light_grey"
+                app:layout_constraintHorizontal_bias=".65"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -134,21 +158,6 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="125sp"
-                android:layout_height="wrap_content"
-                android:layout_margin="12.5dp"
-                android:background="@drawable/round_et"
-                android:backgroundTint="@color/et_login"
-                android:fontFamily="@font/nunito"
-                android:text="SIGN UP"
-                android:textColor="@color/base_red"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
