--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,18 +11,19 @@
         android:title=""/>
 
     <item
-        android:id="@+id/nav_comm"
-        android:icon="@drawable/ic_home"
+        android:id="@+id/nav_post"
+        android:icon="@drawable/ic_post_light"
         android:title=""/>
 
     <item
-        android:id="@+id/nav_post"
-        android:icon="@drawable/ic_home"
+        android:id="@+id/nav_comm"
+        android:icon="@drawable/ic_comm_light"
         android:title=""/>
+
 
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_profile_light"
         android:title=""/>
 
 
