--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -54,6 +54,14 @@
                 android:layout_toEndOf="@id/like"
                 android:src="@drawable/ic_comment" />
 
+            <ImageView
+                android:id="@+id/save"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="10dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_save" />
+
         </RelativeLayout>
 
         <TextView
