--- a/app/src/main/res/drawable/round_et.xml
+++ b/app/src/main/res/drawable/round_et.xml
@@ -3,5 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="100sp" />
+    <solid android:color="@color/light_grey"></solid>
+
 
 </shape>
