--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="match_parent"
@@ -63,15 +63,30 @@
             android:layout_gravity="center"
             android:src="@mipmap/ic_launcher"
             android:id="@+id/image_added" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:orientation="horizontal">
+
+        //profile
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image_profile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/nunito"
             android:hint="write something..."
             android:maxLines="5"
             android:id="@+id/description" />
-
     </LinearLayout>
 
 </LinearLayout>
