--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -139,12 +139,12 @@
                     android:layout_weight=".4" />
 
                 <Button
-                    android:id="@+id/btn_details"
+                    android:id="@+id/btn_logout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/round_et"
                     android:fontFamily="@font/nunito"
-                    android:text="Details"
+                    android:text="Logout"
                     android:textStyle="bold" />
 
             </LinearLayout>
