--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,12 +24,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/btn_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/ic_back" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/btn_back"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="10dp"-->
+<!--                    android:src="@drawable/ic_back" />-->
 
             </RelativeLayout>
 
@@ -149,7 +149,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
@@ -164,7 +164,7 @@
                     android:layout_margin="20dp"
                     android:layout_marginStart="20dp" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
