--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -80,13 +80,13 @@
             android:textStyle="bold"
             android:textSize="16sp"/>
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/fullname"
-            android:hint="Full Name"
-            android:layout_marginTop="20dp"
-            app:met_floatingLabel="normal"/>
+<!--        <com.rengwuxian.materialedittext.MaterialEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/fullname"-->
+<!--            android:hint="Full Name"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            app:met_floatingLabel="normal"/>-->
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
