--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -10,10 +10,10 @@
         android:icon="@drawable/ic_search_light"
         android:title=""/>
 
-<!--    <item-->
-<!--        android:id="@+id/nav_comm"-->
-<!--        android:icon="@drawable/ic_comm_light"-->
-<!--        android:title=""/>-->
+    <item
+        android:id="@+id/nav_comm"
+        android:icon="@drawable/ic_comm_light"
+        android:title=""/>
 
 
     <item
